tests/src/frontend/syntax/invalid/static_frozen_method.sk
class C() {
  static frozen fun m(): String { "Fail" }
}

fun main(): String {
  C::m()
}
